--- a/FoodRep/style.css
+++ b/FoodRep/style.css
@@ -410,9 +410,7 @@ right: 10rem;
         top: -2rem; 
     }
 
-    body{
-        background-color: rgb(75, 42, 165);
-    }
+   
     
   }
 
@@ -478,9 +476,7 @@ span .fa-search{
 .subtotal-wrapper{
     margin-left: -3.5rem;
 }
- body{
-    background-color: rgb(112, 165, 42);
-}
+
 
 
 }
@@ -492,9 +488,11 @@ span .fa-search{
    .header-container{
        display: none;
    }
-   body{
-    background-color: brown;
+  
+   .second-header-wrapper{
+       display: none;
    }
+  
 
 }
 
